--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1,9 +1,34 @@
-canvas {
+/* canvas {
     padding-left: 0;
     padding-right: 0;
     margin-left: auto;
     margin-right: auto;
-    display: block;
+    width: 100%;
+    height: 100vh;
+    display: block; 
+} */
+
+.title {
+    position: absolute;
+    top: 10px; 
+    left: 10px;
+    font-size: 3.5rem;
+    font-weight: bold;
+}
+
+.turnTitle {
+    position: absolute;
+    top: 1.5rem; 
+    right: 1.5rem; 
+    font-size: 2rem;
+}
+
+.button {
+    font-size: 1.3rem;
+    position: absolute;
+    top: 4rem;
+    left: 11px;
+    color: black;
 }
 
 body {
